# ChangeLog for x11-misc/spacefm
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/spacefm/ChangeLog,v 1.69 2015/05/12 12:31:24 zlg Exp $

  11 May 2015; Daniel Campbell <zlg@gentoo.org> spacefm-9999.ebuild,
  metadata.xml:
  Add video-thumbnail USE flag, fix maintainer data

  11 Mar 2015; Yixun Lan <dlan@gentoo.org> -spacefm-0.8.7.ebuild:
  drop old per discuss with maintainer

  10 Mar 2015; Yixun Lan <dlan@gentoo.org> metadata.xml:
  update maintainer's email address

  26 Nov 2014; Yixun Lan <dlan@gentoo.org> metadata.xml:
  update Daniel Campbell as maintainer

  25 Nov 2014; Julian Ospald <hasufell@gentoo.org> metadata.xml:
  drop maintainership

  04 Jul 2014; Julian Ospald <hasufell@gentoo.org> spacefm-0.9.4.ebuild:
  stable

*spacefm-0.9.4 (02 Apr 2014)

  02 Apr 2014; Julian Ospald <hasufell@gentoo.org> +spacefm-0.9.4.ebuild:
  version bump

  29 Mar 2014; Agostino Sarubbo <ago@gentoo.org> spacefm-0.9.3.ebuild:
  Stable for x86, wrt bug #504360

  22 Mar 2014; Chema Alonso <nimiux@gentoo.org> spacefm-0.9.3.ebuild:
  Stable for amd64 wrt bug #504360

  17 Jan 2014; Julian Ospald <hasufell@gentoo.org> -spacefm-0.8.6.ebuild,
  -spacefm-0.9.0.ebuild, -spacefm-0.9.1.ebuild, -spacefm-0.9.2.ebuild:
  remove old

*spacefm-0.9.3 (17 Jan 2014)

  17 Jan 2014; Julian Ospald <hasufell@gentoo.org> +spacefm-0.9.3.ebuild:
  version bump

*spacefm-0.9.2 (06 Dec 2013)

  06 Dec 2013; Julian Ospald <hasufell@gentoo.org> +spacefm-0.9.2.ebuild:
  version bump

*spacefm-0.9.1 (06 Nov 2013)

  06 Nov 2013; Julian Ospald <hasufell@gentoo.org> +spacefm-0.9.1.ebuild:
  version bump

*spacefm-0.9.0 (27 Oct 2013)

  27 Oct 2013; Julian Ospald <hasufell@gentoo.org> +spacefm-0.9.0.ebuild:
  version bump, uses gtk+:3

  07 Jul 2013; Michael Weber <xmw@gentoo.org> -spacefm-0.8.3.ebuild,
  -spacefm-0.8.5.ebuild:
  drop two old versions.

  14 May 2013; Agostino Sarubbo <ago@gentoo.org> spacefm-0.8.7.ebuild: