@@ -1,9 +1,30 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST spacefm-0.9.3.tar.xz 1291540 SHA256 0072a6f2668ae6649e1cc410f1e7eec172a0297de8b225c963b9e29c6a0ed04d SHA512 02140d1915b77dcbe30c76f3666b8a2bf15f634026d27f059a47c567c5ac697ff1fe9ed95a9dcbed092eaafd9075974cd46a1d315c20e103ea97f0bac9c29df9 WHIRLPOOL 04804f65bafb5fbeb86743a183af3439f0b040d5301cc1b74abc7257a4889d9d16c9ddbe10284da7d1cd9e2b65afb01379835647e1a84e638b6c81778dde7256
 DIST spacefm-0.9.4.tar.xz 1283576 SHA256 75886cc93e6586753f01242ba883856567c3fdc90d240f112662ca3080e25955 SHA512 b7c3c92b4b6cb74f6c1d63a91beca9759af23fd3b7e5ffc10a895fc948f07aa5e28a0085820cae39bd5eb6e0489181369870fd760950dea26bf0b13c9f499a66 WHIRLPOOL ffb962e1c89125253368a2c40dde4dc7b02f54f365a77cd14a21a417ca40ace9d08e0603d52fd6b065e57e80c5f281d85f8b1644b883f683cfee2d1996afffd2
 DIST spacefm-1.0.0.tar.xz 1338824 SHA256 dc3025bd31ea235afaa55cf609d376dc8c79e63dcd127389085758a9b26b97b6 SHA512 b4306092069125608132c3c7a3f54ba33bcc39876ccb409d69795283c83a6eb7c58e9848c9b3b6dbda606886f1f9359fb96a6b9b1b8076bf585fde237b0e3402 WHIRLPOOL db78cbf76b4d151773412d7646055fa26e058b93107eb4b0d84fba369d277211fd4edbe3660bf5a26f3452e4e9ad6c84d724cee4658c7dda63e479d871a7ee3d
-EBUILD spacefm-0.9.3.ebuild 2393 SHA256 f4f09f1d9d1d1e66474eee40c06252845aabb061d7dd00686193c7b6da950986 SHA512 ff9369e8fd38704c5420bc2111c8675a8cec588d7af15773b067080f972bdaf21c986eefe62f21e3057d681d13d54f7f54785a8fffbf526220612ed1ee6fd02f WHIRLPOOL 41dd55262092e1a67daa92ce28b0fe3cc20f45992676157ce164b59b87cd173696862359f15a476856a4ab999acc6a44c15a81c1b76e77ed3f9f3a89f289c5d7
-EBUILD spacefm-0.9.4.ebuild 2398 SHA256 e8453e64b1f0ecb3036ee2c50cdebe82e4db43a23bd08f8ef9214fb1988aa04a SHA512 8779288261af973ff5d738903454d3df00ac191f871b2a078f275ff221dd989d060a86b05746bcf1442d066f7548e52aadd7b3c3560faa6f1b214939578316d4 WHIRLPOOL 57c223a7ceff328a576a4352ceac11c947ba248a3b1501bf3d83cbc86b3a58b67c13cf3c7d7c08439dedda2e4fce3ced6b018dbd7597749a2ac8468d5dc9a2ef
-EBUILD spacefm-1.0.0.ebuild 2538 SHA256 f1aff9ef67bc4f55cfade9616633b2cad0b6cf3167d382a4b3cf7fb3834eb742 SHA512 39d9b70f9d55f61ec475e9b125ea6cbba0198ded2f131d9778faa8a4ec5e31e3232a864ae9bca73603ab2314b1456b028805d6c68d9ebd422587b492ed34be98 WHIRLPOOL 227b5e65084af1e371efe2a0621c669a219f9362848712632884b956647b1f05b5d1d257ed6ee4f3beb2e8be8a373135e02be0f6495d525a22588aa0f780a6fb
-EBUILD spacefm-9999.ebuild 2468 SHA256 c1c6819aa0d5d7e3a761b180d4720c4be7c12116b3fdc6c059759b1e8e8e2bcf SHA512 784835e07394771c1d32ad4ca777066126cbcdaef4a171020be18e836efb12d18edf66b2332d0ee53adcbec617931655fe09c7c2e4dabec9bb9a739d11c42a18 WHIRLPOOL af0c4346f226a8e2b37ddfce74da6e64e331e8b893d60e80fc47522102c3345da7427a62918b6a5667dc8b4c0963306f0ea9f36c57df5c05444e480b9bf34be6
-MISC ChangeLog 9417 SHA256 e753fdb4be05f0836b5cd302809e676405b72aa1483bd441eb9dfb357bb5ceec SHA512 c01a172c1814f8eee3da3083ffa5da59a42423813a2e7be24ee43024c4bdd55f48ab923a7352a08e2aec84b2d2adf6bcd2a6c6ff0130e8317bf22d242e42ff88 WHIRLPOOL 659e190a57625bae35ad2ea0314572bca272532db8bb7099d7c297191ffe5e06945b1ad07dc5d066fa93b9919cf02c83f2241bec625f65320475c331b5f9480d
+EBUILD spacefm-0.9.3.ebuild 2400 SHA256 2e8d2bb19ba17586d172f0d1a608b0dcb3fa3a6b1671d5bb8a71578e2eb04009 SHA512 698a49ea238cfcad5ea0e6cf9ac0db88a509951288bbbe69a0d315a27e82662374afe68a80bf05230d7ff73164ea4b27ae12d95afa995c6f7ed1c2cb5b9a2846 WHIRLPOOL e4a17db24398739be1d4c3ace3501a534d33fb81df5cfb2a5a51567e60f3d2c3f12505dc75c9730fab95a2efa45f6d1a295ce1e1b45d3dd6684bb3cea2d7a3f4
+EBUILD spacefm-0.9.4.ebuild 2400 SHA256 a70a73421bdd426372bcf02229bd8f74fe54547264fb5989f09470cc1ad100f5 SHA512 09e5d4167fc7116892bf3a338bfe40d11b9ea58c2e10e0cea1636127568558bb40ed358f4b2ca36a4e90d962338058fec826616a17036a45e8af2a48319dbded WHIRLPOOL 616e3b06f59da9e533e31bb8ba14ee84f22fe7ff1a882ba2890083689aca53b9198a03189db374cb998041af5e29cf66d8d490ab5e47913bcb8008177f5746ce
+EBUILD spacefm-1.0.0.ebuild 2545 SHA256 93f53d586fe2e7e0a6062cf7baff0953a3d58898d8410e9a808aa0df42d8141a SHA512 1b87892093daaa3ca8ce97f6983c8d7432632f387250e03d74feb4589c7c5b98180f275bb8b38a9d55f89f15cc6f436e4c6a79540d9fc055b1cb7da9ce3c47d8 WHIRLPOOL 06a9696b17d6501b1f5f97e54ab66e1397036ba2f5d68411a0daf874a51211d2c0f4f3c9650ca8e477a9f773fc38c42607ff62f6b7b77142339af3b99ed54aea
+EBUILD spacefm-9999.ebuild 2475 SHA256 f500707994f4e6048c1b5eddb5393645ec38ba9007061294213b4e406d92b957 SHA512 0ef14d76be7de8c96231d04a4a14c531e52a8f8dd5aa45915f70d67f04996176493f4e62168a7c156ab3e47fc0ebdc1c9e6ad39f1f301e3bf2178cc9e669eae4 WHIRLPOOL 253bcbb38dfc4e6ed2e6de506dbda6a7e4e7c1af2f7e4356a0c2cc4a4b16d880c48dd9711b4a5d40f1a49c14c8a6603a5f284b51dcca3b12361852a367722e3c
+MISC ChangeLog 9616 SHA256 af4a7df5752433ac6916cf53bf47630850740ab4b14fd86c513588b0c0ecad81 SHA512 de2ad5b44a98c49a57d1bb9012e5d5bbc02c247e7b568f4bee797dc62eb8c0b0af75ba9ebd81dc8f63b8e6d89704ee704b828687ec11fce5260c4ae26ccd17d9 WHIRLPOOL 1fd0927192882c0c6ffc4b3e3b4538a0d8a0727796809af60db37763d42436c7714973cd9227e241f76e61da7a0872778aec49b89c1cbb44e58fe7845cf3b0df
 MISC metadata.xml 1127 SHA256 37a17e1dc4f2ab1e94d627c5e50831b6a29e67f1425d0f8f76cf7e524548d67b SHA512 bda9c47725dba929ae0c944af8ea4c60dc085c1e7cee836c5999727eba70e0767495a9acedbe0d7335c54c7f37fa74f6a3975b3b28e2e90d96ed349c78678677 WHIRLPOOL af1c0047ffc5fd5a49d9a3e31f8709be01e11fd51cac56cacb7b1783983248b059df5dc74255290931a6839661d682491f6e4473ccddb75649af4958372bfb61
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0
+
+iQJiBAEBCABMBQJVcKGaRRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
+MTY5NkQ3RDM3NkRBN0U5QjZGMTUwMDZCMUYzOERDQTQ1QTFFQwAKCRAGsfONykWh
+7NjUD/9vDR2sFWfNLO3wZFDffF7AdjZwq7B83bNDjcKVj1iMl/c5KsXNJKQCmdsD
+rnEUMCcGr+CHmb7UxnSWSe9Mu49thXANQsh1x38v42qU4BmQNfQSIgwQQt09cM2W
+xGKzrtVQIzH34s2fACU0fcql9Z2gBbx7jACR/K45NtcGsGY3miHBQBWWLXrqLX8b
+0uAH+JAQ9hLy0F4QTjQ+Mm/keF/WgUrYWUaHOL7NpydvJMdR0jFUvNbBQwELx+co
+aohsCOCXP8ukvyMDSJN2+prr8cJyoJT2t/Otkn43o9s9/O0/26CzvjV+cMcaAt9N
+rrDXUL8IAqYXRFuXx88uIy3L1DvAU+wDkV5aQTbKzn/fj6JS0SgfYHCRnjvxclPj
+VhNS9vIwoDO14mWtLD9LLsvx9Y/EEwdM/Zq8J7g9FMntOHSempMo9no7C79lRwqf
+SF4bl+yL37oD3NRDe3CGd6ZGXhaHQW+Aznqw4j2jkYpkMbrw3fYt3HLe/sr2XJA6
+lWCF0OZhrPjEXsnWZy+F8GP+Vi4kcfXMjuyAfWb67lperCdeEfSsC+SjGLNV8aq/
+odu4IKiBBCyfnMO5pqopV0MSBlKGb9C40/k8AycKcVb5M+LlUHoKg1Gzf2qdEVO2
+d/Ie94v36lKU+fPwPkjwiO75rfvPmC6W7+R4ZKomcvkDxuTrIw==
+=BtHM
+-----END PGP SIGNATURE-----
