@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/spacefm/spacefm-1.0.0.ebuild,v 1.1 2015/05/12 12:31:24 zlg Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/spacefm/spacefm-1.0.0.ebuild,v 1.2 2015/06/04 19:06:03 kensington Exp $
 
 EAPI=5
 
@@ -65,7 +65,7 @@ pkg_postinst() {
 	elog "To perform as root functionality you need one of the following:"
 	elog "  x11-misc/ktsuss"
 	elog "  x11-libs/gksu"
-	elog "  kde-base/kdesu"
+	elog "  kde-apps/kdesu"
 	elog "Other optional dependencies:"
 	elog "  sys-apps/dbus"
 	elog "  sys-process/lsof (device processes)"
