@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/spacefm
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/spacefm/ChangeLog,v 1.69 2015/05/12 12:31:24 zlg Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/spacefm/ChangeLog,v 1.70 2015/06/04 19:06:03 kensington Exp $
+
+  04 Jun 2015; Michael Palimaka <kensington@gentoo.org> spacefm-0.9.3.ebuild,
+  spacefm-0.9.4.ebuild, spacefm-1.0.0.ebuild, spacefm-9999.ebuild:
+  Move various kde-base packages to kde-apps.
 
   11 May 2015; Daniel Campbell <zlg@gentoo.org> spacefm-9999.ebuild,
   metadata.xml:
